[package]
name = "nda"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [ "tray-icon", "unstable"] }
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
tauri-plugin-appearance = "0.4.0"
tauri-plugin-udp = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
native-dialog = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
lazy_static = "1.4.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = ["tauri/custom-protocol"]
